package com.nicolasdev.transactionorchestrator.domain.model;

public enum DocumentType {
    CC,
    NIT,
    PASSPORT,
    CE
}
