package com.nicolasdev.transactionorchestrator.domain.model;

public enum TransactionStatus {
    PENDING,
    APPROVED,
    REJECTED,
    FAILED
}
